# claudii-exploratores

./: .gitignore  NOTICE  README.md
docs/: DISTRIBUTION.md  INSTALL.md  RELEASE_NOTES_v1.0.0-alpha.md  access-requirements-guide.md  github-repo-setup.txt  query-auth-vpn-classification.md  query_classification.csv
mcp/: README.md  config.example.json  pyproject.toml
mcp/exploratores_osint_mcp/: __init__.py  catalog.json  redactor.py  server.py
scripts/: build_release.sh  build_verification_worklist.py  classify_queries.py  extract_catalog.js  generate_access_guide.py  generate_docs.py  generate_live_report.py  record_verification.py
shared/: osint_core.py
skill/claudii-exploratores/: SKILL.md
skill/claudii-exploratores/references/: catalog_overview.md  methodology.md
skill/claudii-exploratores/scripts/: _iban_countries.py  exploratores.py  iban_tools.py
