[project]
name = "claudii-exploratores-mcp"
version = "1.0.0a1"
description = "Claudii Exploratores — MCP server exposing the Exploratores OSINT toolkit (898 tools): indicator classification, curated OSINT search-URL building, IBAN validation and PII redaction."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "See repository LICENSE" }
authors = [{ name = "Ported from Exploratores by Ramingo (SOsintOps)" }]
keywords = ["osint", "mcp", "investigation", "intelligence", "iban", "redaction"]
dependencies = [
  "mcp[cli]>=1.2.0",
]

[project.scripts]
claudii-exploratores-mcp = "exploratores_osint_mcp.server:main"

[project.urls]
Homepage = "https://github.com/SOsintOps/claudii-exploratores"
Upstream = "https://github.com/SOsintOps/Exploratores"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exploratores_osint_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"exploratores_osint_mcp/catalog.json" = "exploratores_osint_mcp/catalog.json"
